--- a/assets/index.html
+++ b/assets/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Registro de Usuarios</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets.css/style.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         </form>
         <div id="usuarios"></div>
     </div>
-    <script src="assets/assets.js/script.js"></script>
+    <script src="assets.js/script.js"></script>
 </body>
 
 </html>
